syntax = "proto3";

package plainkv;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/roy2220/plainkv/internal/protocol";

message HashMapInfo {
    int64 slot_dirs_addr = 1;
    int64 slot_dir_count = 2;
    int64 max_slot_dir_count_shift = 3;
    int64 slot_count = 4;
    int64 min_slot_count_shift = 5;
    int64 item_count = 6;
    int64 payload_size = 7;
}

message HashSlot {
    repeated HashItemInfo item_infos = 1 [ (gogoproto.nullable) = false ];
    bytes bin = 2;
}

message HashItemInfo {
    fixed64 key_sum = 1;
    int64 key_size = 2;
    int64 value_size = 3;
}
